feat: Relay count of feedbacks filled
Honestly, we should be doing more. Communicating which faculties and
perhaps confirming that we're actually successful in filling it. However
my laziness prevents me from doing such things and taking such measures.
