# server/grpc_service_server.go
@@ -179,16 +179,16 @@ func (serviceServer) DeregisterWifiMac(ctx context.Context, req *v1.DeregisterWi
 	return &v1.EmptyMessage{}, nil
 }
 
-func (serviceServer) FillFacultyFeedback(ctx context.Context, req *v1.FillFacultyFeedbackRequest) (*v1.EmptyMessage, error) {
+func (serviceServer) FillFacultyFeedback(ctx context.Context, req *v1.FillFacultyFeedbackRequest) (*v1.FillFacultyFeedbackResponse, error) {
 	amizoneClient, ok := ctx.Value(ContextAmizoneClientKey).(*amizone.Client)
 	if !ok {
 		return nil, status.Errorf(codes.Internal, "failed to authenticate")
 	}
 
-	err := amizoneClient.SubmitFacultyFeedbackHack(req.Rating, req.QueryRating, req.Comment)
+	filledFor, err := amizoneClient.SubmitFacultyFeedbackHack(req.Rating, req.QueryRating, req.Comment)
 	if err != nil {
 		return nil, status.Errorf(codes.Unknown, "failed submission: %s", err.Error())
 	}
 
-	return &v1.EmptyMessage{}, nil
+	return &v1.FillFacultyFeedbackResponse{FilledFor: filledFor}, nil
 }
